<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.SignUpFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:background="@drawable/header">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textSize="40sp"
                android:textColor="#fff"
                android:textStyle="bold"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_to_continue"
                android:textSize="18sp"
                android:textColor="#FBC02D"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Demo Refer Code: DemoAccount9876"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:textStyle="bold"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerText1"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="35dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name_text"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000"
            android:layout_marginTop="5dp"
            android:layout_marginStart="40dp"/>

        <EditText
            android:id="@+id/sign_up_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="5dp"
            android:autofillHints="name"
            android:background="@drawable/forget"
            android:hint="@string/enter_your_name_text"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_text"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000"
            android:layout_marginTop="5dp"
            android:layout_marginStart="40dp"/>

        <EditText
            android:id="@+id/sign_up_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="5dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/forget"
            android:hint="@string/enter_your_email_text"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number_text"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000"
            android:layout_marginTop="5dp"
            android:layout_marginStart="40dp"/>

        <EditText
            android:id="@+id/sign_up_number_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="5dp"
            android:autofillHints="phone"
            android:background="@drawable/forget"
            android:hint="@string/enter_your_number_text"
            android:inputType="number"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_text"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000"
            android:layout_marginTop="5dp"
            android:layout_marginStart="40dp"/>

        <EditText
            android:id="@+id/sign_up_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="5dp"
            android:autofillHints="password"
            android:background="@drawable/forget"
            android:hint="@string/enter_the_password_text"
            android:inputType="textPassword"
            android:minHeight="48dp" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/referral_code_txt"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000"
            android:layout_marginTop="5dp"
            android:layout_marginStart="40dp"/>

        <EditText
            android:id="@+id/sign_up_refer_code_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="5dp"
            android:autofillHints="referCode"
            android:background="@drawable/forget"
            android:hint="@string/enter_the_refer_code_optional"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button"
            android:text="@string/registerText2"
            android:textColor="#fff"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/do_you_have_an_account_sign_in"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>


</ScrollView>