<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".fragments.ForgotFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@drawable/header">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textSize="40sp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_marginTop="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_your_password_txt"
            android:textSize="18sp"
            android:textColor="#FBC02D"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/reset_lyt_otp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:orientation="vertical">


        <TextView
            android:id="@+id/text_view_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="20dp"
            android:layout_marginStart="35dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000"
            android:layout_marginTop="35dp"
            android:layout_marginStart="40dp"/>

        <EditText
            android:id="@+id/reset_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email_text"
            android:background="@drawable/forget"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"
            android:visibility="visible"
            android:autofillHints="emailAddress" />

        <EditText
            android:id="@+id/reset_otp_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/otp"
            android:background="@drawable/forget"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:autofillHints="otp"
            android:inputType="number" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/reset_password_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:layout_marginHorizontal="35dp"
            android:background="@drawable/button"
            android:fontFamily="@font/carter_one"
            android:padding="@dimen/_8sdp"
            android:text="@string/reset"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/resend_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resent_otp"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="35dp"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit_otp_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/submit_otp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#fff"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:background="@drawable/button"
            android:layout_marginTop="30dp"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/change_lyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/new_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_password_text"
            android:background="@drawable/forget"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="10dp"
            android:visibility="visible"
            android:autofillHints="password"
            android:inputType="textPassword" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/password_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/reset_password"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#fff"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:background="@drawable/button"
            android:layout_marginTop="30dp" />

        <TextView
            android:id="@+id/back_to_login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_login_click_here"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

    </LinearLayout>



</LinearLayout>