<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.LoginFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:background="@drawable/header">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textSize="40sp"
                android:textColor="#fff"
                android:textStyle="bold"
                android:layout_marginTop="50dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_to_continue_txt"
                android:textSize="18sp"
                android:textColor="#FBC02D"
                android:textStyle="bold"/>

        </LinearLayout>

        <TextView
            android:id="@+id/text_view_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="20dp"
            android:layout_marginStart="35dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000"
            android:layout_marginTop="35dp"
            android:layout_marginStart="40dp"/>

        <EditText
            android:id="@+id/login_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email_text"
            android:background="@drawable/forget"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"/>

        <EditText
            android:id="@+id/login_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_password_text"
            android:background="@drawable/forget"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:autofillHints="password" />

        <TextView
            android:id="@+id/forgot_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password_txt"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="35dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/login"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#fff"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:background="@drawable/button"
            android:layout_marginTop="30dp" />

        <TextView
            android:id="@+id/sign_up_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_sign_up_txt"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

    </LinearLayout>


</ScrollView>

