<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_8sdp"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <ImageView
            android:id="@+id/points_image"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/congo" />

        <TextView
            android:id="@+id/title_text_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_4sdp"
            android:fontFamily="@font/cantata_one"
            android:gravity="center"
            android:text="@string/you_won"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_4sdp"
            android:gravity="center"
            android:text="@string/you_won"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel_btn"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_4sdp"
                android:background="@drawable/button_empty_bg"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_btn"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_4sdp"
                android:background="@drawable/btn_bg"
                android:text="@string/add_to_wallet"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>